fixed Title issue with input covering title on iPad

--- a/fireflight/src/styles/_hamburger.scss
+++ b/fireflight/src/styles/_hamburger.scss
@@ -1,11 +1,11 @@
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1200px) {
   .appBarTitle {
     display: none;
     color: black;
   }
 }
 
-@media only screen and (min-width: 769px) {
+@media only screen and (min-width: 1200px) {
   .appBarTitleMobile {
     display: none;
   }
